--- a/main.css
+++ b/main.css
@@ -2,10 +2,11 @@
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
  }
-
+/*
 body {
+	width:1200px;
 }
-
+*/
 .container {
 	overflow: hidden;
 	display: block;
